--- a/src/main/resources/paleoftheancients/localization/zhs/keywords.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/keywords.json
@@ -4,7 +4,7 @@
     "NAMES": [
       "灼伤"
     ],
-    "DESCRIPTION": "被灼伤的单位被攻击时额外收到 #r灼伤 层数的伤害。 NL 当 #r灼伤 层数 超过4的倍数时，给 1 层  #b虚弱 。 NL 对于敌人， #r灼伤 会在每回合结束时减半。"
+    "DESCRIPTION": "被灼伤的单位被攻击时额外收到 #r灼伤 层数的伤害。 NL 当 #r灼伤 层数 超过4的倍数时，获得 #b1 层  #b虚弱 。 NL 对于敌人， #r灼伤 会在每回合结束时减半。"
   },
   "paleoftheancients:StackedKeyword": {
     "PROPER_NAME": "堆叠",
