--- a/src/main/resources/paleoftheancients/localization/zhs/monsters.json
+++ b/src/main/resources/paleoftheancients/localization/zhs/monsters.json
@@ -21,7 +21,7 @@
     "DIALOG": [
       "#y被动： 在回合结束时，造成 #b",
       " 点伤害。 NL #y激发：造成 #b",
-      " 点伤害。 NL #y攻击 充能球会将它释放！"
+      " 点伤害。 NL #y攻击 充能球会将其 #y释放 ！"
     ]
   },
   "paleoftheancients:frostorb": {
@@ -42,7 +42,7 @@
     "DIALOG": [
       "#y被动：  在回合开始时，本回合获得 #r",
       " 点力量。 NL #y被动： 本回合获得 #r",
-      " 点力量。 NL #y攻击 充能球会将它释放！"
+      " 点力量。 NL #y攻击 充能球会将其 #y释放 ！"
     ]
   },
 
@@ -85,8 +85,8 @@
       "不，不，不！",
       "这不行！",
       "节目现在进入第二幕！",
-      "别担心，我的朋友。我的袖子上还有很多花招！",
-      "在这个美妙的时刻，我将向你展示我的特长！",
+      "别担心，我的朋友。我还有很多没表演过的魔术呢！",
+      "在这个美妙的时刻，我将向你展示我的绝迹！",
       "我们的节目到此结束。谢谢，再见~",
       "你真是个了不起的观众！",
       "我希望你和我一样喜欢这个。再见~"
@@ -102,7 +102,7 @@
       "@鸡鸣@"
     ]
   },
-  
+
   "paleoftheancients:Reimu": {
     "MOVES": [
       "阴阳宝玉",
@@ -115,7 +115,10 @@
       "神技 [八方鬼缚阵]",
       "大结界 [博丽弹幕结界]"
     ],
-    "NAME": "乐园的巫女"
+    "NAME": "乐园的巫女",
+    "DIALOG": [
+      "[梦想天生]"
+    ]
   },
   "paleoftheancients:YinYangOrb": {
     "NAME": "阴阳玉"
@@ -140,10 +143,10 @@
       "@冲啊@",
       "我的抽牌堆是空的……",
 
-      "回到塔底……",
+      "滚回塔底……",
       "@啊@",
       "又来了……",
-      "应该选蜥蜴尾巴……",
+      "该选蜥蜴尾巴……",
       "@坏灭！@",
       "你好涅奥，我的老朋友……"
     ]
@@ -166,9 +169,9 @@
       "逃跑"
     ]
   },
-    "paleoftheancients:BASlime": {
+  "paleoftheancients:BASlime": {
     "NAME": "模糊轮廓",
-	 "DIALOG": [
+    "DIALOG": [
       "（这个是故意的，请别 ~真就~ 找我）"
     ]
   },
@@ -194,7 +197,7 @@
   "paleoftheancients:EyeOfRebirth": {
     "NAME": "重生之眼"
   },
-    "paleoftheancients:TheBandit": {
+  "paleoftheancients:TheBandit": {
     "NAME": "强盗",
     "MOVES": [
       "大型聚会",
@@ -215,6 +218,19 @@
       "哇，你这也 @太慢了@ 吧。",
       "@看看谁才是头号玩家！@",
       "你真的很擅长这个游戏。"
+    ]
+  },
+  "paleoftheancients:TimeEaterer": {
+    "MOVES": [
+      "倒转",
+      "非凡启示",
+      "双重启示",
+      "三重启示"
+    ],
+    "DIALOG": [
+      "@深渊为你而开！@",
+      "@虚空向你招手！@",
+      "@混乱统治永恒！@"
     ]
   }
 }
