Final battle now uses original cards instead of making stat equivalent copies. Fixed a crash in the Bandit.

--- a/src/main/resources/paleoftheancients/localization/eng/powers.json
+++ b/src/main/resources/paleoftheancients/localization/eng/powers.json
@@ -452,7 +452,7 @@
   "paleoftheancients:KeyFinisherPower": {
     "NAME": "The Key Finisher",
     "DESCRIPTIONS": [
-      "#ySpaces game pieces #rland #ron trigger #b"," more ","time","times."
+      "#ySpaces game pieces #rland #ron trigger #b"," more ","time","times.","Damage taken increased by ","x."
     ]
   },
   "paleoftheancients:ImprisonedPower": {
